INTERNAL-56: Implement google recaptcha for login form in hyva way

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_login.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_login.xml
@@ -23,5 +23,7 @@
             </action>
         </referenceBlock>
         <referenceBlock name="customer.new" remove="true" />
+        <move element="recaptcha_validation_recaptcha" destination="customer_form_login"
+              as="recaptcha_validation"/>
     </body>
 </page>
