--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/login.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/login.phtml
@@ -5,7 +5,6 @@ declare(strict_types=1);
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\Customer\LoginButton;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
-use Hyva\Theme\ViewModel\ReCaptcha;
 use Magento\Customer\Block\Form\Login;
 use Magento\Framework\Escaper;
 
@@ -13,7 +12,6 @@ use Magento\Framework\Escaper;
 /** @var Login $block */
 /** @var LoginButton $loginButtonViewModel */
 /** @var ViewModelRegistry $viewModels */
-/** @var ReCaptcha $recaptcha */
 /** @var HeroiconsOutline $heroiconsoutline */
 
 $loginButtonViewModel = $viewModels->require(LoginButton::class);
@@ -21,21 +19,18 @@ $loginButtonViewModel = $viewModels->require(LoginButton::class);
 // Disabling autocomplete on form fields is not recommended,
 // Enable it in Stores->Configuration->Customers configuration->Password Options
 
-// Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
-// on the Magento_ReCaptchaCustomer module
-$recaptcha = $block->getData('viewModelRecaptcha');
-
 $errorMessage = $block->getErrorMessage();
 $successMessage = $block->getSuccessMessage();
+
 ?>
-<div class="mx-auto mb-16 w-[412px] max-w-full" x-data="Authentication">
+<div class="mx-auto mb-16 w-[412px] max-w-full"
+     x-data="Authentication(`<?= htmlspecialchars($block->getChildHtml('recaptcha_validation')); ?>`)">
     <div aria-labelledby="block-customer-login-heading">
         <form class="w-full"
               action="<?= $escaper->escapeUrl($block->getPostActionUrl()) ?>"
               method="post"
-              x-data="initCustomerLoginForm()"
               id="customer-login-form"
-              @submit.prevent="submitAuthForm('customer-login-form')"
+              @submit.prevent="submitAuthForm('customer-login-form', `<?= htmlspecialchars($block->getChildHtml('recaptcha_validation')); ?>`)"
             >
             <?= $block->getBlockHtml('formkey') ?>
             <fieldset class="fieldset login">
@@ -62,7 +57,7 @@ $successMessage = $block->getSuccessMessage();
                     />
                 </div>
                 <?php if ($errorMessage): ?>
-                    <div class="text-red-600 mt-3">
+                    <div class="text-error mt-3">
                         <?= $errorMessage ?>
                     </div>
                 <?php endif; ?>
@@ -77,19 +72,25 @@ $successMessage = $block->getSuccessMessage();
                            title="<?= $escaper->escapeHtmlAttr(__('Password')) ?>"
                     />
                 </div>
-                <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_LOGIN) : '' ?>
                 <?= $block->getChildHtml('form_additional_info') ?>
                 <a class="link link--primary mt-2 text-sm tracking-widest" href="<?= $escaper->escapeUrl($block->getForgotPasswordUrl()) ?>" x-element-transition-trigger>
                     <span><?= $escaper->escapeHtml(__('Forgot Your Password?')) ?></span>
                 </a>
-                <button type="submit" class="button button--filled-primary mt-7 w-full py-4 " name="send"
-                    <?php if ($loginButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>
-                >
+                <button type="submit" class="button button--filled-primary mt-7 w-full py-4 " name="send">
                     <span><?= $escaper->escapeHtml(__('Sign In')) ?></span>
                 </button>
-                <div x-show="displayErrorMessage" class="mt-3">
-                    <p class="text-red text-sm" x-text="generalErrorMessage"></p>
+                <div class="mt-4">
+                    <?= $block->getBlockHtml('recaptcha_input_field_recaptcha') ?>
                 </div>
+                <div x-show="displayErrorMessage" class="mt-3">
+                    <p class="text-red" x-text="generalErrorMessage"></p>
+                </div>
+                <template x-for="(value, key) in errorMessages" :key="key">
+                    <div>
+                        <p class="text-error" x-text="value"></p>
+                    </div>
+                </template>
+
                 <div class="mt-6 text-center text-sm tracking-wider">
                     <a href="<?= $this->getUrl('customer/account/create') ?>" class="link link--primary text-md" x-element-transition-trigger>
                         <?= $escaper->escapeHtml(__('Create new account')) ?>
@@ -97,8 +98,5 @@ $successMessage = $block->getSuccessMessage();
                 </div>
             </fieldset>
         </form>
-    </div>
-    <div class="w-full">
-        <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_LOGIN) : '' ?>
     </div>
 </div>
