--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
@@ -115,8 +115,8 @@ $productName = $block->getProduct()->getName();
         </div>
     </div>
 
-    <!-- Other images -->
-    <template x-for="(image, index) in images.filter(img => img.position !== '<?= $mainImage ? $mainImage->getData('position') : null ?>')" :key="index">
+    <!-- Other images, TODO: Filtering by position isn't accurate .filter(img => img.position !== '<?= $mainImage ? $mainImage->getData('position') : null ?>') -->
+    <template x-for="(image, index) in images" :key="index">
         <div class="animate-on-transition relative aspect-product flex-shrink-0 overflow-hidden border-black md:rounded-2xl">
             <div class="flex items-center justify-center size-full <?= $isContain ? 'p-[4%]' : '' ?>">
                 <img
