--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
@@ -14,7 +14,6 @@ $product = $block->getProduct();
 $productType = $product->getTypeId();
 
 /**
- * Add to cart url is set on 'product.info' block by
  * @see \Magento\Checkout\Block\Cart\Item\Configure::_prepareLayout
  */
 $productInfoBlock = $block->getLayout()->getBlock('product.info');
@@ -22,12 +21,13 @@ $isPopup = $block->getData('is_popup') ?? false;
 
 ?>
 
+<div class="hidden" id="xxxxx" data-xx="<?= var_dump($isPopup) ?>"></div>
 <?php if ($product->isSaleable()): ?>
   <template x-if="!$store.main.isMobile || <?= (int) ($isPopup || in_array($productType, ['simple', 'virtual'])) ?>">
     <form method="post"
           action="<?= $escaper->escapeUrl($productInfoBlock->getSubmitUrl($product)) ?>"
           id="product_addtocart_form"
-      <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
+          <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
           @submit.prevent="addToCart($event)"
       <?php if (!$isPopup): ?>
         class="animate-on-transition md:mb-5 max-md:hidden"
